--- a/基础物理/杨振宁/第一讲.md
+++ b/基础物理/杨振宁/第一讲.md
@@ -166,7 +166,7 @@ In earlier centuries, before the 20th century, the biographers, all biographers,
 
 And now there are many biographies which show that Newton, though a great scientist, was not a likable man. He was not a kind person. He was vindictive, and he was not a person who was well-liked. And the controversy between him and Leibniz was one of the things that dominated the end of his life. If you go to the library, you can browse through some of the books which give details of the life of Newton.（而现在有很多传记表明，牛顿虽然是一位伟大的科学家，却并不是一个讨人喜欢的人。他不是一个善良的人。他报复心强，也不是一个受欢迎的人。他与莱布尼茨之间的争议是他晚年生活中的重要事件之一。如果你去图书馆，可以翻阅一些详细记载牛顿生平的书籍。）
 
- Now one of the controversies between Newton and Leibniz was what symbol to use for the derivative. dx dt is the derivative of x with respect to t. That is the notation of Leibniz. It was not the notation of Newton. Newton did not use the word derivative. Newton called it the fluxion. Today nobody uses the word fluxion. And the notation of Newton was very awkward, while this dx dt notation is very convenient. So today everybody uses Leibniz notation. （当时牛顿和莱布尼茨争论的一个焦点就是该用什么符号来表示导数。dx/dt 是 x 对 t 的导数。这是莱布尼茨的符号表示法。牛顿并没有使用这种符号。牛顿没有使用“导数”这个词，他称之为“流数”。如今没有人再用“流数”这个词了。牛顿的符号表示法非常笨拙，而这种 dx/dt 的符号表示法非常方便。所以现在大家都用莱布尼茨符号。）
+ Now one of the controversies between Newton and Leibniz was what symbol to use for the derivative. dx dt is the derivative of x with respect to t. That is the notation of Leibniz. It was not the notation of Newton. Newton did not use the word derivative. Newton called it the fluxion. Today nobody uses the word fluxion. And the notation of Newton was very awkward, while this dx dt notation is very convenient. So today everybody uses Leibniz notation. （当时牛顿和莱布尼茨争论的一个焦点就是该用什么符号来表示导数。$\mathrm{d}x/\mathrm{d}t$ 是 $x$ 对 $t$ 的导数。这是莱布尼茨的符号表示法。牛顿并没有使用这种符号。牛顿没有使用“导数”这个词，他称之为“流数”。如今没有人再用“流数”这个词了。牛顿的符号表示法非常笨拙，而这种 $\mathrm{d}x/\mathrm{d}t$ 的符号表示法非常方便。所以现在大家都用莱布尼茨符号。）
 
 Okay, so we'll have a five-minute recess, and then we come in. (好的，我们休息五分钟，然后回来。)
 
