--- a/数学物理方法/一、向量分析.md
+++ b/数学物理方法/一、向量分析.md
@@ -76,6 +76,28 @@
 (b) 写出该球体的向量方程。 $\boldsymbol{r}=\boldsymbol{r}_{1}+\boldsymbol{a}$  （$\boldsymbol{a}$ 可以指向任何方向，但具有固定的大小 a）
 
 
+**1.1.10**  角反射器由三个相互垂直的反射面组成。证明入射到角反射器上的光线（经过所有三个反射面）会沿着与入射方向平行的方向反射回去。 提示：考虑反射对描述光线方向的矢量分量所产生的影响。（经过某平面反射后，对应维度的分量反向，其他维度不变，经过三个平面反射后，三个维度都反向，与入射光线平行且反向）
+
+对于一个平面，法向量为 $\boldsymbol{n}$（单位矢量），入射矢量 $\boldsymbol{v}$ （指向平面）的反射公式为：$$\boldsymbol{v}'=\boldsymbol{v}-2(\boldsymbol{v} \cdot \boldsymbol{n})\boldsymbol{n}$$
+![[Pasted image 20251020123457.png|250]]
+
+在 $x$ 平面，$\boldsymbol{n}=(1,0,0)$ $\boldsymbol{v}'=(v_{x}, v_{y}, v_{z})-2(v_{x}, 0, 0)=(-v_{x},v_{y}, v_{z})$ 
+
+
+**1.1.11**  哈勃定律。哈勃发现，遥远星系正在以与它们距离地球位置成正比的速度远离我们。对于第 $i$ 个星系，$\boldsymbol{v}_{i} = H_{0} \boldsymbol{r}_{i}$，其中我们位于原点。证明星系远离我们的这一现象并不意味着我们处于宇宙的中心。具体来说，将位于 $\boldsymbol{r}_{1}$ 的星系作为新原点，证明哈勃定律仍然成立。
+
+$\boldsymbol{r}_i$ 是第 $i$ 个星系相对于我们（原点 $O$）的位置矢量；$\boldsymbol{v}_i$ 是第 $i$ 个星系相对于我们的速度；
+
+在星系 1 的参考系中，星系 $i$ 的位置矢量是：$\boldsymbol{r}'_i = \boldsymbol{r}_i - \boldsymbol{r}_1$
+
+![[Pasted image 20251021122021.png|200]]
+
+在星系 1 的参考系中，星系 $i$ 的速度是它们相对于我们的速度差：$\boldsymbol{v}'_i = \boldsymbol{v}_i - \boldsymbol{v}_1$
+
+代入哈勃定律：$\boldsymbol{v}'_i = H_0 \boldsymbol{r}_i - H_0 \boldsymbol{r}_1= H_0 (\boldsymbol{r}_i - \boldsymbol{r}_1)=H_0 \, \boldsymbol{r}'_i$
+
+
+
 
 ## 1.2 坐标轴的旋转
 
@@ -121,6 +143,8 @@ x_{2}^{\prime}&=a_{21}x_{1}+a_{22}x_{2}.
 a_{12}&=\cos\left(x_{1}^{\prime}, x_{2}\right)=\sin\varphi, \\[1.2ex]
 a_{21}&=\cos\left(x_{2}^{\prime}, x_{1}\right)=\cos\left(\varphi+\frac{\pi}{2}\right)=-\sin\varphi.
 \end{align}\tag{1.13}$$新符号的优势在于它允许我们使用求和符号 $\sum$，并将方程（1.12）改写为$$x_{i}^{\prime}=\sum_{j=1}^{2}a_{ij}x_{j},\quad i=1,2. \tag{1.14}$$请注意，$i$ 作为一个参数，当它等于 1 时会产生一个方程，当它等于 2 时会产生第二个方程。当然，索引 $j$ 是一个求和索引，一个哑索引，就像积分变量一样，$j$ 可以用任何其他方便的符号代替。
+
+
 
 
 
