--- a/理论物理/朗道/一、力学/第 2 章、守恒定律.md
+++ b/理论物理/朗道/一、力学/第 2 章、守恒定律.md
@@ -1,7 +1,7 @@
 
 ## 6、能量
 
-在力学系统运动过程中，描述其状态的 $2s$ 个变量 $q_i,\dot{q}_I, (i=l,2, \cdots, s)$ 随时间变化，但是存在关于这些变量的某些函数，其值在运动过程中保持恒定，且仅由初始条件决定，这样的函数称为 *运动积分* 。
+在力学系统运动过程中，描述其状态的 $2s$ 个变量 $q_i,\dot{q}_i, (i=1,2, \cdots, s)$ 随时间变化，但是存在关于这些变量的某些函数，其值在运动过程中保持恒定，且仅由初始条件决定，这样的函数称为 *运动积分* 。
 
 对于具有 $s$ 个自由度的封闭力学系统，独立的运动积分数等于 $2s -1$，这从下面简单的论证中很容易得出。运动方程通解中包含 $2s$ 个任意常数（参见方程 (2.6) 下面的讨论）。由于封闭系统的运动方程不显含时间，所以可以完全任意选择初始时刻，总可以将方程解中的任意常数之一选作时间的可加常数 $t_0$。从 $2s$ 个函数$$\begin{align*}
 q_i &= q_i(t + t_0, C_1, C_2, \cdots, C_{2s-1}), \\[1.5ex]
@@ -16,12 +16,16 @@ $$中消去 $t + t_0$，将 $2s - 1$ 个任意常数 $C_1, C_2, \cdots,  C_{2s-1
 我们首先介绍 *时间均匀性* 导出的守恒定律。
 
 由于时间具有均匀性，封闭系统的拉格朗日函数不显含时间。因此拉格朗日函数对时间的全导数可以写成$$\frac{\mathrm{d}L}{\mathrm{d}t}=\sum_i\frac{\partial L}{\partial q_i}\dot{q}_i+\sum_i\frac{\partial L}{\partial\dot{q}_{i}}\ddot{q}_i$$
-（如果 $L$ 显含时间，右端还应该有 $\partial L/\partial t$），利用拉格朗日方程将 $\partial L/\partial q_i$ 替换为 $\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\dot{q}_i}$，得$$\frac{\mathrm{d}L}{\mathrm{d}t}=\sum_{i}\dot{q}_{i}\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\dot{q}_{i}}+\sum_{i}\frac{\partial L}{\partial\dot{q}_{i}}\ddot{q}_{i}=\sum_{i}\frac{\mathrm{d}}{\mathrm{d}t}\left(\frac{\partial L}{\partial\dot{q}_{i}}\dot{q}_{i}\right)$$或者$$\frac{\mathrm{d}}{\mathrm{d}t}\left(\sum_{i}\dot{q}_i\frac{\partial L}{\partial\dot{q}_i}-L\right)=0.$$由此可知$$E=\sum_i\dot{q}_i\frac{\partial L}{\partial\dot{q}_i}-L \tag{6.1}$$在封闭系统运动中保持不变，是运动积分，称为系统的**能量**。根据 (6.1) ，能量与拉格朗日函数的关系是线性的，由拉格朗日函数的可加性可以直接得出能量的可加性。
+（如果 $L$ 显含时间，右端还应该有 $\partial L/\partial t$），利用拉格朗日方程将 $\partial L/\partial q_i$ 替换为 $\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\dot{q}_i}$，得$$\frac{\mathrm{d}L}{\mathrm{d}t}=\sum_{i}\dot{q}_{i}\frac{\mathrm{d}}{\mathrm{d}t}\frac{\partial L}{\partial\dot{q}_{i}}+\sum_{i}\frac{\partial L}{\partial\dot{q}_{i}}\ddot{q}_{i}=\sum_{i}\frac{\mathrm{d}}{\mathrm{d}t}\left(\frac{\partial L}{\partial\dot{q}_{i}}\dot{q}_{i}\right)$$
+> [!tip]
+> 这里利用乘法求导法则 $(uv)'=u'v+uv'$，这里 $u=\frac{\partial L}{\partial\dot{q}_{i}},v=\dot{q_{i}}$，此处对于有限项求和 $\sum$ 和 $\frac{\mathrm{d}}{\mathrm{d}t}$ 可互换顺序
+> 
+
+或者$$\frac{\mathrm{d}}{\mathrm{d}t}\left(\sum_{i}\dot{q}_i\frac{\partial L}{\partial\dot{q}_i}-L\right)=0.$$由此可知$$E=\sum_i\dot{q}_i\frac{\partial L}{\partial\dot{q}_i}-L \tag{6.1}$$在封闭系统运动中保持不变，是运动积分，称为系统的**能量**。根据 (6.1) ，<font color="blue">能量与拉格朗日函数的关系是线性的，由拉格朗日函数的可加性可以直接得出能量的可加性。</font>
 
 在上述推导中仅仅利用了拉格朗日函数不显含时间的性质，所以能量守恒定律不仅对于封闭系统成立，对位于定常外场（即不显含时间）中的系统也成立。能量守恒的力学系统也称为 *保守系统*。
 
 在 $§5$ 我们已经知道，封闭（或者位于定常外场中的）系统的拉格朗日函数可写成$$L=T(q,\dot{q})-U(q),$$其中 $T$ 是速度的二次函数。利用著名的齐次函数的欧拉定理可得$$\sum_i\dot{q}_i\frac{\partial L}{\partial\dot{q}_i}=\sum_i\dot{q}_i\frac{\partial T}{\partial\dot{q}_i}=2T.$$
-
 > [!tip]
 > 齐次函数的欧拉定理是关于齐次函数的重要性质。一个函数 $f(x_1, x_2, \ldots, x_n)$ 被称为齐次函数，如果对于任意标量 $\lambda$，满足以下条件：$$
 > f(\lambda x_1, \lambda x_2, \ldots, \lambda x_n) = \lambda^k f(x_1, x_2, \ldots, x_n)$$其中 $k$ 是该函数的齐次次数。
@@ -64,38 +68,29 @@ $$中消去 $t + t_0$，将 $2s - 1$ 个任意常数 $C_1, C_2, \cdots,  C_{2s-1
 
 封闭系统动量守恒定律可以表述为：系统的质心作匀速直线运动。这是 §3 给出的单一自由质点惯性定律的推广，单一自由质点的质心就是质点本身。
 
-在研究封闭系统的力学性质时，自然采用质心静止的参考系，这就可以不必_
+在研究封闭系统的力学性质时，自然采用质心静止的参考系，这就可以不必研究系统整体的匀速直线运动，这样的运动并不重要。
 
-_研究系统整体的匀速直线运动，这样的运动并不重要．_
-
-_整体静止的力学系统的能量通常称为内能Ein, ，它包括系统内质点的相对_
-
-_运动动能和相互作用势能．以速度V 作整体运动的系统的能量可以写成_
-
-_E= 立-+Eint·_ _(8.4)_
-
-_2_
-
-_尽管这个公式非常显然，但我们还是给出以下推导．力学系统相对参考系K 和_
-
-_k的能量E 和E 的关系为_
-
-_或者_
-
-_E=½~ 兀式＋ U=1` 国+V)2_ _+ U_
-
-_＝辽__2_ _+_ _V._ _2m飞＋ t__l_ _I;ma亡＋_ _U_
-
-_E=E'+_ _V·P' ＋立__2._ _(8.5)_
-
-_这个公式给出了相对两个不同惯性参考系的能韬关系，类似千公式(8.1) 给出的_
-
-_动量关系如果在参考系K' 中系统质心静止，则p'=O,E'= Eint ，这时就得到公_
-
-_式(8.4)._
+整体静止的力学系统的能量通常称为内能 $E_{\text{int}}$，它包括系统内质点的相对运动动能和相互作用势能。以速度 $\boldsymbol{V}$ 作整体运动的系统的能量可以写成$$E=\frac{\mu V^2}{2}+E_{\text{int}}\tag{8.4}$$
+尽管这个公式非常显然，但我们还是给出以下推导。力学系统相对参考系 $K$ 和 $K'$ 的能量 $E$ 和 $E'$ 的关系为$$\begin{aligned}
+E &=\frac{1}{2}\sum_{a} m_{a}v_{a}^{2}+U=\frac{1}{2}\sum_{a} m_{a}\left(\boldsymbol{v}_{a}^{\prime}+\boldsymbol{V}\right)^{2}+U\\[1.2ex]
+&=\frac{\mu V^{2}}{2}+\boldsymbol{V}\cdot\sum_{a} m_{a}\boldsymbol{v}_{a}^{\prime}+\frac{1}{2}\sum_{a} m_{a}v_{a}^{\prime 2}+U
+\end{aligned}$$
+或者$$
+E=E^{\prime}+\boldsymbol{V}\cdot\boldsymbol{P}^{\prime}+\frac{\mu V^{2}}{2}.
+\tag{8.5}
+$$
+这个公式给出了相对两个不同惯性参考系的能量关系，类似于公式 (8.1) 给出的动量关系。如果在参考系 $K'$ 中系统质心静止，则 $\boldsymbol{P}'=0, E'=E_{\text{int}}$，这时就得到公式 (8.4)。
 
 
+### 习题
 
+**习题**   求相对两个不同惯性参考系的作用量之间的变换关系。
+
+解：拉格朗日函数等于动能和势能之差，显然，它按照类似于公式 (8.5) 的形式变换$$
+L=L^{\prime}+\boldsymbol{V}\cdot\boldsymbol{P}^{\prime}+\frac{\mu V^{2}}{2}.$$将该等式对时间积分可得所要求的作用量的变换关系$$
+S=S^{\prime}+\mu\boldsymbol{V}\cdot\boldsymbol{R}^{\prime}+\frac{\mu V^{2}}{2}t,$$其中 $\boldsymbol{R}^{\prime}$ 是在参考系 $K'$ 中系统的质心的径矢。
+
+## 9、角动量
 
 
 · 20 · 第二章守恒定律
